Bug 490699 - Prefer usage of Integer.valueOf() over new Integer in org.eclipse.swt
Change-Id: Ib05b6a7a232ab197c48b992db669e74da5708cea
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>